--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
+    <h1>WHACK-A-MOLE</h1>
         <div class="wrapper">
             <div class="score">0</div>
             <div class="countdown">0</div>
