--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                 </div>
             </div>
         </div>
+        <div class="cursor"></div>
         <script src="assets/js/script.js"></script>
 </body>
 </html>
