adding to the readme

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Whack-a-Mole Game">
+    <meta name="keywords" content="Whack-a-Mole, Chris Rock, Will Smith">
     <title>WHACK-A-MOLE!</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
