--- a/index.html
+++ b/index.html
@@ -21,9 +21,11 @@
                 <button data-close-button class="close-button">&times;</button>
               </div>
               <div class="modal-body">
-                    Welcome to the "Whack-a-Mole" game where you can play as Will Smith and slap Chris Rock! Your mission is to whack Chris as he pops up from different holes using your mouse or touch screen.
-                    Keep an eye on the timer and try to beat your high score. With fast-paced action and hilarious sound effects, this game is sure to keep you entertained for hours.
-                    Are you ready to show off your slapping skills as Will Smith and become the ultimate Whack-a-Mole champion? 
+                    Welcome to the "Whack-a-Mole" game where you play as Will Smith and slap Chris Rock! 
+                    <br>
+                    Your mission is to whack Chris as he pops up from different holes using your mouse or touch screen.
+                    <br>
+                    Keep an eye on the timer and try to beat your high score. 
                     <br>
                     <br>
                     <h3>Let's go!</h3>
